--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "browserify src/main.js -t [ bubleify ] -o public/bundle.js",
+    "watch": "watchify   src/main.js -t [ bubleify ] -o public/bundle.js"
+  },
   "dependencies": {
     "atem": "^0.1.7",
+    "auto-bind": "^0.1.0",
+    "browserify": "^13.1.1",
+    "bubleify": "^0.6.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "socket.io": "^1.5.0"
+    "preact": "^7.1.0",
+    "preact-hyperscript": "^0.7.0",
+    "socket.io": "^1.5.0",
+    "watchify": "^3.7.0"
   }
 }
